- make correction for checking if STRM file exists already
- workaround issue - buildstrm folders not working #40
v0.1.8 (2018-02-21)
- implement: Support to SSL certificates (HTTPS) #39
- add saltpassword instead of using username
- combine buildstrm and buildstrm2 into one method
- fix for when user removes username/password
- setting interface password fix
- fix for blanking out setting parameters
- add slideshow to + options
- fix passthrough, force never_stream = true
- add passthrough to settings pane
- if passthrough = true, set never_stream = false
v0.1.7 (2017-12-28)
- fix reload to reload user settings
- fix port issue in listing
- add session persistence via cookies (for /list and /settings , implementing #28)
- cleanup slideshow interface
- add crypto slideshow support
v0.1.6 (2017-12-17)
- fix accessing settings when no user defined
- fix default username and password (None -> '')
v0.1.5 (2017-12-17)
- added support for crypto photos
- fix for enroll account (recent break)
- fix for starting with no dbm file (recent break)
v0.1.4 (2017-12-16)
- implement: support for photos playback #10
- secure settings pane
- fix for TV/Movies STRM generation
- implemented search function
- redirect dialogs to screen
- fixup settings pane "autocomplete"ing the fields
- hide settings that only pertain to kodi
- enable settings
- implemented: configuring your plugin settings #13
- fix audio playback
- add [switch to photos] context switch
- add sorting for encrypted items
- fully working encryption streaming playback including on MAC/iOS
- crypto support
v0.1.3 (2017-11-24)
- add parameters keyvalue (generate kv parameter representing the encrypted parameters passed in) and hide (to sumpress displaying the decrypted parameters)
- add duration and resolution
- added thumbnail support
v0.1.2 (2017-11-22)
- fix stability issue (related to query parameters not reloading correctly between navigations
v0.1.1 (2017-11-19)
- fix never_stream = true