@@ -1,3 +1,4 @@
+- STRM building - add 'resolution' parameter to append resolution to STRM filename
 - make correction for checking if STRM file exists already
 - workaround issue - buildstrm folders not working #40
 v0.1.8 (2018-02-21)
